--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -44,6 +44,7 @@ en:
       save_and_add_another: "Save and add another"
       save_and_edit: "Save and edit"
       cancel: "Cancel"
+      add_new: "Add new %{name}"
     delete:
       flash_confirmation: "%{name} was successfully destroyed"
       confirmation: "Yes, I'm sure"
