--- a/config/locales/rails_admin.pl.yml
+++ b/config/locales/rails_admin.pl.yml
@@ -42,6 +42,8 @@ pl:
       save_and_add_another: "Zapisz i dodaj kolejny"
       save_and_edit: "Zapisz i wróć do edycji"
       cancel: "Anuluj"
+    edit:
+      add_new_associated_model_name: "Add new %{name}"
     delete:
       flash_confirmation: "%{name} zastał usunięty"
       confirmation: "Tak, jestem pewien."
