--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -43,6 +43,8 @@ ru:
       save_and_add_another: "Сохранить и добавить новый"
       save_and_edit: "Сохранить и продолжить редактирование"
       cancel: "Отмена"
+    edit:
+      add_new_associated_model_name: "Add new %{name}"
     delete:
       flash_confirmation: "%{name} удалено"
       confirmation: "Да, я уверен"
