--- a/config/locales/rails_admin.uk.yml
+++ b/config/locales/rails_admin.uk.yml
@@ -39,6 +39,8 @@ uk:
       save_and_add_another: "Зберегти і добавити ще"
       save_and_edit: "Зберегти і поредагувати"
       cancel: "Скасувати"
+    edit:
+      add_new_associated_model_name: "Add new %{name}"
     delete:
       flash_confirmation: "%{name} успішно видалено"
       confirmation: "Так, я впевнений"
