Added issue #314 feature
New navigation possibilities :
  - model#weight to override default alphabetical ordering
  - model#parent to nest a model under another model
  - model#dropdown to create a menu-entry for a top-level model

This covers all possibilities for a two level menus (ordering and nesting)

Complete with readme and test

Thanks for reviewing

--- a/README.mkd
+++ b/README.mkd
@@ -241,8 +241,73 @@ You can configure the number of tabs visible in the top navigation:
 Links to the rest of the models will be rendered in a drop down menu next to the
 tabs. Even though this option is not model specific, it shares the same
 semantics as the earlier ones - you could also pass in a block which would be
-evaluated at runtime.
+evaluated at runtime. 
 
+**Create a dropdown menu in navigation**
+
+This will desactivate config.navigation.max_visible_tabs, you'll need to make check 
+you don't break the layout.
+
+    RailsAdmin.config do |config|
+      config.model Team do
+        parent League
+      end
+    end
+
+    RailsAdmin.config do |config|
+      config.model Division do
+        parent League
+      end
+    end
+
+Obtained navigation:
+
+    Dashboard
+    ...
+    League
+      Division
+      Team
+    ...
+
+If you want a non-clickable root menu entry, add 'dropdown ENTRY_NAME' to your parent.
+Your parent will then be placed INSIDE his dropdown, in FIRST position.
+
+Added to previous example:
+
+    RailsAdmin.config do |config|
+      config.model League do
+        dropdown 'League related'
+      end
+    end
+
+Obtained navigation:
+
+    Dashboard
+    ...
+    League related  # (non-clickable)
+      League
+      Division
+      Team
+    ...
+
+**Change models order in navigation**
+
+By default, they are ordered by alphabetical order. If you need to override this, specify
+a weight attribute. Default is 0. Lower values will bubble items to the left, higher values 
+will move them to the right. Items with same weight will still be ordered by alphabetical order.
+The mecanism is fully compatible with dropdown menus. Items will be ordered within their own 
+menu subset.
+
+Example:
+
+    RailsAdmin.config do |config|
+      config.model League do
+        dropdown 'League related'
+        weight -1
+      end
+    end
+
+The 'League related' dropdown menu will move to the leftmost position.
 
 ### List view ###
 
