Add the ability to export CSVs of all collections Conflicts:
	config/locales/rails_admin.lv.yml
	rails_admin.gemspec

--- a/config/locales/rails_admin.de.yml
+++ b/config/locales/rails_admin.de.yml
@@ -27,6 +27,7 @@ de:
       select_action: "Auswählen"
       delete_selected: "Auswahl löschen"
       add_new: "Neu hinzufügen"
+      export_csv: "Export as CSV"
       search: "Suchen"
       select: "Auswählen %{name} zum Bearbeiten"
       show_all: "Alle anzeigen"
