--- a/config/locales/rails_admin.lv.yml
+++ b/config/locales/rails_admin.lv.yml
@@ -24,6 +24,7 @@ lv:
       select_action: "Izvēlies"
       delete_selected: "Dzēst izvēlētos"
       add_new: "Pievienot jaunu"
+      export_csv: "Export as CSV"
       search: "Meklēt"
       select: "Izvēlieties %{name}, lai labotu"
       show_all: "Parādīt visu"
