--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -25,6 +25,7 @@ bg:
       edit_action: "Редактирай"
       delete_action: "Изтрий"
       add_new: "Добави"
+      export_csv: "Export as CSV"
       search: "ТЪРСИ"
       select: "Избор на %{name} за редакция"
       show_all: "Покажи всички"
