--- a/config/locales/rails_admin.da.yml
+++ b/config/locales/rails_admin.da.yml
@@ -22,6 +22,7 @@ da:
       edit_action: "Rediger"
       delete_action: "Slet"
       add_new: "Tilføj ny"
+      export_csv: "Export as CSV"
       search: "SØG"
       select: "Vælg %{name} der skal redigeres"
       show_all: "Vis alle"
