--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -27,6 +27,7 @@ en:
       select_action: "Select"
       delete_selected: "Delete selected"
       add_new: "Add new"
+      export_csv: "Export as CSV"
       search: "Search"
       select: "Select %{name} to edit"
       show_all: "Show all"
