--- a/config/locales/rails_admin.es.yml
+++ b/config/locales/rails_admin.es.yml
@@ -22,6 +22,7 @@ es:
       edit_action: "Editar"
       delete_action: "Eliminar"
       add_new: "Agregar"
+      export_csv: "Export as CSV"
       search: "BUSCAR"
       select: "Seleccione %{name} para editar"
       show_all: "Mostrar todos"
