--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -24,6 +24,7 @@ pt-PT:
       edit_action: "Editar"
       delete_action: "Remover"
       add_new: "Adicionar"
+      export_csv: "Export as CSV"
       search: "PROCURAR"
       select: "Selecione %{name} para editar"
       show_all: "Exibir todos"
