CSV engine rewritten. Todo list in main_controller#export

--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -25,7 +25,7 @@ bg:
       edit_action: "Редактирай"
       delete_action: "Изтрий"
       add_new: "Добави"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "ТЪРСИ"
       select: "Избор на %{name} за редакция"
       show_all: "Покажи всички"
@@ -59,3 +59,5 @@ bg:
       updated: "редактиран"
       delete: "изтрий"
       deleted: "изтрит"
+      export: "export"
+      exported: "exporté(e)"
