--- a/config/locales/rails_admin.de.yml
+++ b/config/locales/rails_admin.de.yml
@@ -27,7 +27,7 @@ de:
       select_action: "Auswählen"
       delete_selected: "Auswahl löschen"
       add_new: "Neu hinzufügen"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "Suchen"
       select: "Auswählen %{name} zum Bearbeiten"
       show_all: "Alle anzeigen"
@@ -61,3 +61,5 @@ de:
       updated: "aktualisiert"
       delete: "löschen"
       deleted: "gelöscht"
+      export: "export"
+      exported: "exporté(e)"
