--- a/config/locales/rails_admin.fi.yml
+++ b/config/locales/rails_admin.fi.yml
@@ -25,7 +25,7 @@ fi:
       select_action: "Valitse"
       delete_selected: "Poista valitut"
       add_new: "Lisää uusi"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "HAKU"
       select: "Valitse muokattava %{name}"
       show_all: "Näytä kaikki"
@@ -59,3 +59,5 @@ fi:
       updated: "päivitetty"
       delete: "poista"
       deleted: "poistettu"
+      export: "export"
+      exported: "exporté(e)"
