--- a/config/locales/rails_admin.lt.yml
+++ b/config/locales/rails_admin.lt.yml
@@ -26,7 +26,7 @@ lt:
       select_action: "Pasirinkti"
       delete_selected: "Pašalinti pasirinktus"
       add_new: "Pridėti"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "IEŠKOTI"
       select: "Pasirinkti %{name} redagavimui"
       show_all: "Rodyti visus įrašus"
@@ -60,3 +60,5 @@ lt:
       updated: "pakeistas"
       delete: "pašalinti"
       deleted: "pašalintas"
+      export: "export"
+      exported: "exporté(e)"
