--- a/config/locales/rails_admin.mn.yml
+++ b/config/locales/rails_admin.mn.yml
@@ -60,3 +60,5 @@ mn:
       updated: "шинэчилсэн"
       delete: "устгах"
       deleted: "устгасан"
+      export: "export"
+      exported: "exporté(e)"
