--- a/config/locales/rails_admin.pt-BR.yml
+++ b/config/locales/rails_admin.pt-BR.yml
@@ -25,7 +25,7 @@ pt-BR:
       edit_action: "Alterar"
       delete_action: "Excluir"
       add_new: "Adicionar"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "BUSCAR"
       select: "Selecione %{name} para alterar"
       show_all: "Exibir todos"
@@ -61,3 +61,5 @@ pt-BR:
       updated: "atualizado"
       delete: "excluir"
       deleted: "excluído"
+      export: "export"
+      exported: "exporté(e)"
