--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -24,7 +24,7 @@ pt-PT:
       edit_action: "Editar"
       delete_action: "Remover"
       add_new: "Adicionar"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "PROCURAR"
       select: "Selecione %{name} para editar"
       show_all: "Exibir todos"
@@ -58,3 +58,5 @@ pt-PT:
       updated: "actualizado"
       delete: "remover"
       deleted: "removido"
+      export: "export"
+      exported: "exporté(e)"
