--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -26,7 +26,7 @@ ru:
       select_action: "Выбрать"
       delete_selected: "Удалить выбранные"
       add_new: "Добавить"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "ПОИСК"
       select: "Выберите %{name} для редактирования"
       show_all: "Показать все"
@@ -60,3 +60,5 @@ ru:
       updated: "обновлен"
       delete: "удалить"
       deleted: "удален"
+      export: "export"
+      exported: "exporté(e)"
