--- a/config/locales/rails_admin.uk.yml
+++ b/config/locales/rails_admin.uk.yml
@@ -22,7 +22,7 @@ uk:
       edit_action: "Редагувати"
       delete_action: "Видалити"
       add_new: "Створити"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "ПОШУК"
       select: "Оберіть %{name} для редагування"
       show_all: "Показати все"
@@ -56,3 +56,5 @@ uk:
       updated: "оновлено"
       delete: "видалити"
       deleted: "видалено"
+      export: "export"
+      exported: "exporté(e)"
