--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -51,7 +51,20 @@ en:
       flash_confirmation: "%{name} was successfully destroyed"
       confirmation: "Yes, I'm sure"
     export:
-      confirmation: "Export"
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to..."
+        encoding_to_help: "Choose which encoding should be used (Microsoft Excel will try to open .csv file with your system default encoding)"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description, not recommended)"
     flash:
       successful: "%{name} was successfully %{action}"
       error: "%{name} failed to be %{action}"
