--- a/config/locales/rails_admin.fr.yml
+++ b/config/locales/rails_admin.fr.yml
@@ -45,7 +45,7 @@ fr:
       cancel: "Annuler"
       add_new: "Ajouter un(e) %{name}"
     export:
-      confirmation: "Exporter"
+      confirmation: "Exporter en %{name}"
     delete:
       flash_confirmation: "%{name} a été détruit(e) avec succès"
       confirmation: "Oui, je suis sûr(e)"
