--- a/config/locales/rails_admin.lv.yml
+++ b/config/locales/rails_admin.lv.yml
@@ -24,7 +24,7 @@ lv:
       select_action: "Izvēlies"
       delete_selected: "Dzēst izvēlētos"
       add_new: "Pievienot jaunu"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "Meklēt"
       select: "Izvēlieties %{name}, lai labotu"
       show_all: "Parādīt visu"
@@ -58,3 +58,5 @@ lv:
       updated: "atjaunots"
       delete: "dzēst"
       deleted: "dzēsts"
+      export: "export"
+      exported: "exporté(e)"
