--- a/config/locales/rails_admin.pl.yml
+++ b/config/locales/rails_admin.pl.yml
@@ -25,7 +25,7 @@ pl:
       edit_action: "Edytuj"
       delete_action: "Usuń"
       add_new: "Dodaj"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "SZUKAJ"
       select: "Wybierz %{name} do edycji"
       show_all: "Wybierz wszystkie"
@@ -59,3 +59,5 @@ pl:
       updated: "zapisany"
       delete: "usuń"
       deleted: "usunięty"
+      export: "export"
+      exported: "exporté(e)"      
