--- a/config/locales/rails_admin.sv.yml
+++ b/config/locales/rails_admin.sv.yml
@@ -27,7 +27,7 @@ sv:
       select_action: "Marker"
       delete_selected: "Ta bort markerade"
       add_new: "Lägg till ny"
-      export_csv: "Export as CSV"
+      export: "Export current view"
       search: "SÖK"
       select: "Markera %{name} för att redigera"
       show_all: "Visa alla"
@@ -61,3 +61,6 @@ sv:
       updated: "uppdaterad"
       delete: "ta bort"
       deleted: "borttagen"
+      export: "export"
+      exported: "exporté(e)"
+      
