--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -25,9 +25,10 @@ en:
       edit_action: "Edit"
       delete_action: "Delete"
       select_action: "Select"
+      export: "Export current view"
+      export_selected: "Export selected"
       delete_selected: "Delete selected"
       add_new: "Add new"
-      export: "Export current view"
       search: "Search"
       select: "Select %{name} to edit"
       show_all: "Show all"
@@ -51,7 +52,22 @@ en:
       flash_confirmation: "%{name} was successfully destroyed"
       confirmation: "Yes, I'm sure"
     export:
-      confirmation: "Export"
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to..."
+        encoding_to_help: "Choose which encoding should be used (Microsoft Excel will try to open .csv file with your system default encoding). Leave empty for input encoding: %{name}"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description, not recommended)"
+        col_sep: "Column separator"
+        col_sep_help: "Default is ',', but depending on your locale, ';' may be a better fit for Excel"
     flash:
       successful: "%{name} was successfully %{action}"
       error: "%{name} failed to be %{action}"
