--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -25,9 +25,10 @@ en:
       edit_action: "Edit"
       delete_action: "Delete"
       select_action: "Select"
+      export: "Export current view"
+      export_selected: "Export selected"
       delete_selected: "Delete selected"
       add_new: "Add new"
-      export: "Export current view"
       search: "Search"
       select: "Select %{name} to edit"
       show_all: "Show all"
