Added translations for export feature.

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -25,7 +25,7 @@ en:
       edit_action: "Edit"
       delete_action: "Delete"
       select_action: "Select"
-      export: "Export current view"
+      export_action: "Export current view"
       export_selected: "Export selected"
       delete_selected: "Delete selected"
       add_new: "Add new"
@@ -58,16 +58,16 @@ en:
       fields_from_associated: "Fields from associated %{name}"
       display: "Display %{name}: %{type}"
       options_for: "Options for %{name}"
-      empty_value: "<empty>"
+      empty_value_for_associated_objects: "<empty>"
       csv: 
         header_for_root_methods: "%{name}" # 'model' is available
         header_for_association_methods: "%{name} [%{association}]"
-        encoding_to: "Encode to..."
-        encoding_to_help: "Choose which encoding should be used (Microsoft Excel will try to open .csv file with your system default encoding). Leave empty for input encoding: %{name}"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
         skip_header: "No header"
-        skip_header_help: "Do not output a header (no fields description, not recommended)"
+        skip_header_help: "Do not output a header (no fields description)"
         col_sep: "Column separator"
-        col_sep_help: "Default is ',', but depending on your locale, ';' may be a better fit for Excel"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} was successfully %{action}"
       error: "%{name} failed to be %{action}"
