--- a/config/locales/rails_admin.bg.yml
+++ b/config/locales/rails_admin.bg.yml
@@ -24,8 +24,10 @@ bg:
     list:
       edit_action: "Редактирай"
       delete_action: "Изтрий"
+      select_action: "Select"
+      export_action: "Export current view"
+      export_selected: "Export selected"
       add_new: "Добави"
-      export: "Export current view"
       search: "ТЪРСИ"
       select: "Избор на %{name} за редакция"
       show_all: "Покажи всички"
@@ -46,8 +48,24 @@ bg:
       save_and_edit: "Запамети и редактирай"
       cancel: "Откажи"
     delete:
-      flash_confirmation: "%{name} е успешно изтрит"
       confirmation: "Да, сигурен съм"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} е успешно %{action}"
       error: "%{name} се провали при %{action}"
@@ -60,4 +78,4 @@ bg:
       delete: "изтрий"
       deleted: "изтрит"
       export: "export"
-      exported: "exporté(e)"
+      exported: "exported"
