--- a/config/locales/rails_admin.de.yml
+++ b/config/locales/rails_admin.de.yml
@@ -25,9 +25,10 @@ de:
       edit_action: "Bearbeiten"
       delete_action: "Löschen"
       select_action: "Auswählen"
+      export_action: "Export current view"
+      export_selected: "Export selected"
       delete_selected: "Auswahl löschen"
       add_new: "Neu hinzufügen"
-      export: "Export current view"
       search: "Suchen"
       select: "Auswählen %{name} zum Bearbeiten"
       show_all: "Alle anzeigen"
@@ -50,6 +51,23 @@ de:
     delete:
       flash_confirmation: "%{name} wurde erfolgreich entfernt"
       confirmation: "Ja, ich bin sicher"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} wurde erfolgreich %{action}"
       error: "%{name} wurde nicht %{action}"
@@ -62,4 +80,4 @@ de:
       delete: "löschen"
       deleted: "gelöscht"
       export: "export"
-      exported: "exporté(e)"
+      exported: "exported"
