--- a/config/locales/rails_admin.es.yml
+++ b/config/locales/rails_admin.es.yml
@@ -21,8 +21,11 @@ es:
     list:
       edit_action: "Editar"
       delete_action: "Eliminar"
+      select_action: "Select"
+      export_action: "Export current view"
+      export_selected: "Export selected"
+      delete_selected: "Delete selected"
       add_new: "Agregar"
-      export: "Export current view"
       search: "BUSCAR"
       select: "Seleccione %{name} para editar"
       show_all: "Mostrar todos"
@@ -45,6 +48,23 @@ es:
     delete:
       flash_confirmation: "%{name} fue eliminado exitosamente"
       confirmation: "Sí, estoy seguro"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} fue %{action} correctamente"
       error: "%{name} no se pudo %{action} correctamente"
@@ -57,5 +77,4 @@ es:
       delete: "borrar"
       deleted: "borrado"
       export: "export"
-      exported: "exporté(e)"
-      
+      exported: "exported"      
