--- a/config/locales/rails_admin.lt.yml
+++ b/config/locales/rails_admin.lt.yml
@@ -25,8 +25,9 @@ lt:
       delete_action: "Pašalinti"
       select_action: "Pasirinkti"
       delete_selected: "Pašalinti pasirinktus"
+      export_action: "Export current view"
+      export_selected: "Export selected"
       add_new: "Pridėti"
-      export: "Export current view"
       search: "IEŠKOTI"
       select: "Pasirinkti %{name} redagavimui"
       show_all: "Rodyti visus įrašus"
@@ -49,6 +50,23 @@ lt:
     delete:
       flash_confirmation: "%{name} ištrintas"
       confirmation: "Taip, aš sutinku"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} buvo sėkmingai %{action}"
       error: "Nepavyko %{action} %{name}"
@@ -61,4 +79,4 @@ lt:
       delete: "pašalinti"
       deleted: "pašalintas"
       export: "export"
-      exported: "exporté(e)"
+      exported: "exported"
