--- a/config/locales/rails_admin.lv.yml
+++ b/config/locales/rails_admin.lv.yml
@@ -23,8 +23,9 @@ lv:
       delete_action: "Dzēst"
       select_action: "Izvēlies"
       delete_selected: "Dzēst izvēlētos"
+      export_action: "Export current view"
+      export_selected: "Export selected"
       add_new: "Pievienot jaunu"
-      export: "Export current view"
       search: "Meklēt"
       select: "Izvēlieties %{name}, lai labotu"
       show_all: "Parādīt visu"
@@ -47,6 +48,23 @@ lv:
     delete:
       flash_confirmation: "%{name} veiksmīgi izdzēsts"
       confirmation: "Jā, esmu pārliecināts"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} veiksmīgi %{action}"
       error: "%{name} netika %{action}"
@@ -59,4 +77,4 @@ lv:
       delete: "dzēst"
       deleted: "dzēsts"
       export: "export"
-      exported: "exporté(e)"
+      exported: "exported"
