--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -23,8 +23,11 @@ pt-PT:
     list:
       edit_action: "Editar"
       delete_action: "Remover"
+      select_action: "Select"
+      export_action: "Export current view"
+      export_selected: "Export selected"
+      delete_selected: "Delete selected"
       add_new: "Adicionar"
-      export: "Export current view"
       search: "PROCURAR"
       select: "Selecione %{name} para editar"
       show_all: "Exibir todos"
@@ -47,6 +50,23 @@ pt-PT:
     delete:
       flash_confirmation: "%{name} foi apagado com sucesso"
       confirmation: "Sim, com certeza."
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "Um registo de %{name}, foi %{action} com sucesso"
       error: "Um registo de %{name} falhou ao ser %{action}"
@@ -59,4 +79,4 @@ pt-PT:
       delete: "remover"
       deleted: "removido"
       export: "export"
-      exported: "exporté(e)"
+      exported: "exported"
