--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -25,8 +25,9 @@ ru:
       delete_action: "Удалить"
       select_action: "Выбрать"
       delete_selected: "Удалить выбранные"
+      export_action: "Export current view"
+      export_selected: "Export selected"
       add_new: "Добавить"
-      export: "Export current view"
       search: "ПОИСК"
       select: "Выберите %{name} для редактирования"
       show_all: "Показать все"
@@ -49,6 +50,23 @@ ru:
     delete:
       flash_confirmation: "%{name} удалено"
       confirmation: "Да, я уверен"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} был %{action}"
       error: "Не получилось %{action} %{name}"
@@ -61,4 +79,4 @@ ru:
       delete: "удалить"
       deleted: "удален"
       export: "export"
-      exported: "exporté(e)"
+      exported: "exported"
