--- a/config/locales/rails_admin.uk.yml
+++ b/config/locales/rails_admin.uk.yml
@@ -22,7 +22,10 @@ uk:
       edit_action: "Редагувати"
       delete_action: "Видалити"
       add_new: "Створити"
-      export: "Export current view"
+      select_action: "Select"
+      export_action: "Export current view"
+      export_selected: "Export selected"
+      delete_selected: "Delete selected"
       search: "ПОШУК"
       select: "Оберіть %{name} для редагування"
       show_all: "Показати все"
@@ -45,6 +48,23 @@ uk:
     delete:
       flash_confirmation: "%{name} успішно видалено"
       confirmation: "Так, я впевнений"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      csv: 
+        header_for_root_methods: "%{name}" # 'model' is available
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default (',')"
     flash:
       successful: "%{name} успішно %{action}"
       error: "неможливо %{action} %{name}"
@@ -57,4 +77,4 @@ uk:
       delete: "видалити"
       deleted: "видалено"
       export: "export"
-      exported: "exporté(e)"
+      exported: "exported"
