--- a/config/locales/rails_admin.pt-BR.yml
+++ b/config/locales/rails_admin.pt-BR.yml
@@ -66,8 +66,9 @@ pt-BR:
         encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
         skip_header: "No header"
         skip_header_help: "Do not output a header (no fields description)"
+        default_col_sep: ","
         col_sep: "Column separator"
-        col_sep_help: "Leave blank for default (',')"
+        col_sep_help: "Leave blank for default ('%{value}')" # value is default_col_sep
     flash:
       successful: "%{name} foi %{action} com sucesso"
       error: "%{name} falhou em %{action}"
