--- a/config/locales/rails_admin.hr.yml
+++ b/config/locales/rails_admin.hr.yml
@@ -7,9 +7,9 @@ hr:
   admin:
     dashboard:
       pagename: "Administracija stranice"
-      name: "Upravljacka ploca"
+      name: "Upravljačka ploča"
       model_name: "Naziv modela"
-      last_used: "Zadni puta koristeno"
+      last_used: "Zadni put korišteno"
       records: "Zapisa"
       modify: "Uredi"
       add_new: "Dodaj novi"
@@ -17,19 +17,19 @@ hr:
       ago: "ago"
     history:
       name: "Povijest"
-      page_name: "Poviest za %{name}"
+      page_name: "Povijest za %{name}"
       no_activity: "Nema aktivnosti"
     credentials:
       log_out: "Odjava"
     list:
       edit_action: "Uredi"
-      delete_action: "Obrisi"
+      delete_action: "Obriši"
       select_action: "Izaberi"
-      delete_selected: "Obrisi odabrano"
+      delete_selected: "Obriši odabrano"
       add_new: "Dodaj novi"
-      search: "Trazi"
-      select: "Izaberi %{name} za uredjivanje"
-      show_all: "Prikazi sve"
+      search: "Traži"
+      select: "Izaberi %{name} za uređivanje"
+      show_all: "Prikaži sve"
     new:
       basic_info: "Osnovni podaci"
       required: "Obavezno"
@@ -37,9 +37,9 @@ hr:
       one_char: "znak."
       many_chars: "znakova ili manje."
       chosen: "Odabrano %{name}"
-      select_choice: "Odaberi sve zeljeno i klikni"
+      select_choice: "Odaberi sve željeno i klikni"
       chose_all: "Odaberi sve"
-      clear_all: "Ocisti sve"
+      clear_all: "Očisti sve"
       up: "Gore"
       down: "Dolje"
       save: "Spremi"
@@ -47,16 +47,16 @@ hr:
       save_and_edit: "Spremi i uredi"
       cancel: "Odustani"
     delete:
-      flash_confirmation: "%{name} je uspjesno obrisano"
+      flash_confirmation: "%{name} je uspješno obrisan(o)"
       confirmation: "Da, siguran sam"
     flash:
-      successful: "%{name} je uspjesno %{action}"
-      error: "%{name} nije uspjesno %{action}"
+      successful: "%{name} je uspješno %{action}"
+      error: "%{name} nije uspješno %{action}"
       noaction: "Nijedna radnja se nije dogodila"
     actions:
       create: "kreiraj"
       created: "kreirano"
       update: "uredi"
-      updated: "uredjeno"
-      delete: "obrisi"
+      updated: "uređeno"
+      delete: "obriši"
       deleted: "obrisano"
