--- a/config/locales/rails_admin.zh_cn.yml
+++ b/config/locales/rails_admin.zh_cn.yml
@@ -23,8 +23,8 @@ zh_cn:
       delete_action: "删除"
       select_action: "选择"
       delete_selected: "删除已选择的"
-      export_action: "Export current view"
-      export_selected: "Export selected"
+      export_action: "导出当前页面"
+      export_selected: "导出选择记录"
       add_new: "添加"
       search: "搜索"
       select: "%{name}编辑"
@@ -52,7 +52,7 @@ zh_cn:
       confirmation: "是的，我确定"
     export:
       confirmation: "Export to %{name}"
-      select: "Select fields to export"
+      select: "选择需要导出的字段"
       fields_from: "Fields from %{name}"
       fields_from_associated: "Fields from associated %{name}"
       display: "Display %{name}: %{type}"
@@ -79,8 +79,8 @@ zh_cn:
       updated: "已更新"
       delete: "删除"
       deleted: "已删除"
-      export: "export"
-      exported: "exported"
+      export: "导出"
+      exported: "已导出"
   datetime:
     distance_in_words:
       x_days: "%{count}天"
