--- a/config/locales/rails_admin.zh_cn.yml
+++ b/config/locales/rails_admin.zh_cn.yml
@@ -81,6 +81,16 @@ zh_cn:
       deleted: "已删除"
       export: "导出"
       exported: "已导出"
+    breadcrumbs:
+      delete: "delete"
+      history: "history"
+      edit: "edit"
+      export: "export"
+      bulk_destroy: "delete"
+      new: "new"
+      model_history: "history"
+      list: "list"
+      dashboard: "dashboard"
   datetime:
     distance_in_words:
       x_days: "%{count}天"
