--- a/config/locales/rails_admin.da.yml
+++ b/config/locales/rails_admin.da.yml
@@ -78,3 +78,13 @@ da:
       deleted: "slettet"
       export: "export"
       exported: "exported"
+    breadcrumbs:
+      delete: "delete"
+      history: "history"
+      edit: "edit"
+      export: "export"
+      bulk_destroy: "delete"
+      new: "new"
+      model_history: "history"
+      list: "list"
+      dashboard: "dashboard"
