--- a/config/locales/rails_admin.pt-PT.yml
+++ b/config/locales/rails_admin.pt-PT.yml
@@ -81,3 +81,13 @@ pt-PT:
       deleted: "removido"
       export: "export"
       exported: "exported"
+    breadcrumbs:
+      delete: "deletar"
+      history: "história"
+      edit: "editar"
+      export: "exportar"
+      bulk_destroy: "deletar"
+      new: "novo"
+      model_history: "história"
+      list: "listar"
+      dashboard: "administração"
