--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -81,3 +81,13 @@ ru:
       deleted: "удален"
       export: "экспортировать"
       exported: "экспортировано"
+    breadcrumbs:
+      delete: "delete"
+      history: "history"
+      edit: "edit"
+      export: "export"
+      bulk_destroy: "delete"
+      new: "new"
+      model_history: "history"
+      list: "list"
+      dashboard: "dashboard"
