"Show" in list view now points to RailsAdmin details view.
RailsAdmin details view now contains a link to view the user in the application.

--- a/config/locales/rails_admin.en.yml
+++ b/config/locales/rails_admin.en.yml
@@ -20,6 +20,7 @@ en:
       page_name: "History for %{name}"
       no_activity: "No Activity"
     details:
+      show_in_app: "Show in app"
       page_name: "Details for %{name}"
       no_file_found: "No file found"
     credentials:
