Added missing (reported at issue 563) es.admin.show.page_name

--- a/config/locales/rails_admin.es.yml
+++ b/config/locales/rails_admin.es.yml
@@ -87,6 +87,7 @@ es:
       history: "historial"
       edit: "editar"
       export: "exportar"
+      show: "mostrar"
       bulk_destroy: "borrar"
       new: "nuevo"
       model_history: "historial"
