--- a/config/locales/rails_admin.fr.yml
+++ b/config/locales/rails_admin.fr.yml
@@ -23,6 +23,7 @@ fr:
       add_new: "Nouveau"
       select_action: "Sélectionner"
       export_action: "Exporter la vue actuelle"
+      show_action: "Voir"
       export_selected: "Exporter les entrées cochées"
       delete_selected: "Supprimer les entrées cochées"
       search: "Recherche"
@@ -46,6 +47,10 @@ fr:
       save_and_edit: "Enregistrer et re-modifier"
       cancel: "Annuler"
       add_new: "Ajouter un(e) %{name}"
+    show:
+      show_in_app: "Voir dans l'application"
+      page_name: "Détails pour %{name}"
+      no_file_found: "Pas de fichier trouvé"
     delete:
       all_of_the_following_related_items_will_be_deleted: " ? Tous les éléments suivants seront supprimés : "
       are_you_sure_you_want_to_delete_the_object: "Êtes-vous sûr de vouloir supprimer les éléments suivants : %{model_name}"
